[tool.poetry]
name = "pypme"
version = "0.7.0"
description = "Python package for PME (Public Market Equivalent) calculation"
authors = ["ymyke"]
license = "MIT"
repository = "https://github.com/ymyke/pypme"
homepage = "https://github.com/ymyke/pypme"
readme = "README.md"
keywords = ["python", "finance", "investing", "financial-analysis", "pme", "investment-analysis"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
xirr = ">=0.1"
numpy-financial = ">=1.0"
pandas = ">=2.2"
tessa = ">=0.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=8"
pytest-mock = ">=3.7"
black = ">=24"
hypothesis = ">=6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
